import React from 'react';
import { shallow } from 'enzyme';
import { Modal } from './modal.component';
import content from '../../content.json';

describe('Modal component', () => {
    const [contentData] = content;
    const { modal } = contentData;

    it('renders correctly according to Snapshot', () => {});
});
