// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal component renders Invalid Modal component according to snapshot 1`] = `
<div
  aria-hidden="true"
  aria-labelledby="modal_error"
  className="modal show"
  id="modal_error"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog text-center modalDialog"
    role="document"
  >
    <div
      className="modal-content modalContent"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title"
          id="modal_errorLabel"
        >
          Niestety :(
        </h5>
        <button
          aria-label="Close"
          className="close"
          data-dismiss="modal"
          type="button"
        >
          <span
            aria-hidden="true"
            className="close closeSign"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <h3
          className="text-justify"
        >
          Twoja wiadomość nie została wysłana. Nastąpił błąd po stronie serwera. Spróbuj ponownie później. Przepraszamy!
        </h3>
      </div>
      <div
        className="text-right p-2"
      >
        <button
          className="btn btn-sm rodoCompButton"
          data-dismiss="modal"
          type="button"
        >
          Zamknij
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal component renders correctModal component according to snapshot 1`] = `
<div
  aria-hidden="true"
  aria-labelledby="modal_ok"
  className="modal show"
  id="modal_ok"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog text-center modalDialog"
    role="document"
  >
    <div
      className="modal-content modalContent"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title"
          id="modal_okLabel"
        >
          Dziękujemy :)
        </h5>
        <button
          aria-label="Close"
          className="close"
          data-dismiss="modal"
          type="button"
        >
          <span
            aria-hidden="true"
            className="close closeSign"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <h3
          className="text-center"
        >
          Twoja wiadomość została wysłana.
        </h3>
      </div>
      <div
        className="text-right p-2"
      >
        <button
          className="btn btn-sm rodoCompButton"
          data-dismiss="modal"
          type="button"
        >
          Zamknij
        </button>
      </div>
    </div>
  </div>
</div>
`;
